<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pdf_viewer">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="pdf.view.night.mode"
            app:summaryOff="@string/night_off"
            app:summaryOn="@string/night_on"
            app:title="@string/night_title" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="pdf.view.page.fling"
            app:summaryOff="@string/fling_off"
            app:summaryOn="@string/fling_on"
            app:title="@string/fling_title" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="pdf.view.anti.aliasing"
            app:summaryOff="@string/aliasing_off"
            app:summaryOn="@string/aliasing_on"
            app:title="@string/aliasing_title" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="pdf.view.page.swipe"
            app:summaryOff="@string/swipe_off"
            app:summaryOn="@string/swipe_on"
            app:title="@string/swipe_title" />


        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="pdf.view.page.snap"
            app:summaryOff="@string/snap_off"
            app:summaryOn="@string/snap_on"
            app:title="@string/snap_title" />

    </PreferenceCategory>

    <Preference
        app:allowDividerAbove="true"
        app:key="@string/about_btn_key"
        app:summary="@string/about_details"
        app:title="@string/about" />

</PreferenceScreen>